# Copper

./: .gitignore  README.md  pyproject.toml
config/: base_case.json  bear_case.json  bull_case.json
copper_model/: __init__.py  __main__.py  cli.py  model.py  plotting.py  regression.py  sources.py  supply.py
dashboard/: app.js  index.html  styles.css
data/seed/: global_copper_supply_assets.csv  global_copper_supply_disruptions.csv  icsg_world_copper_balance_1960_2024.csv  usgs_mcs_2025_country_supply.csv  (+2 more)
outputs/: base_case_forecast.csv  base_case_mine_supply_by_country.csv  base_case_regional_demand.csv  base_case_supply_assets.csv  base_case_supply_conversion_bridge.csv  base_case_supply_summary.csv  bear_case_forecast.csv  bear_case_mine_supply_by_country.csv  bear_case_regional_demand.csv  bear_case_supply_assets.csv  bear_case_supply_conversion_bridge.csv  bear_case_supply_summary.csv  bull_case_forecast.csv  bull_case_mine_supply_by_country.csv  bull_case_regional_demand.csv  bull_case_supply_assets.csv  bull_case_supply_conversion_bridge.csv  bull_case_supply_sources.csv  bull_case_supply_summary.csv  copper_gdp_relationship_diagnostics.csv  demand_driver_regression_dataset.csv  demand_driver_regression_fit.csv  demand_driver_regression_summary.csv  demand_regression_plot_points.csv  demand_world_gdp_regression_dataset.csv  icsg_forecast_2026_04_23.csv  icsg_regional_forecast_2026_04_23.csv  workbook_demand_components.csv  workbook_major_mines.csv  workbook_market_balance.csv  workbook_mine_supply_country.csv
tests/: test_model.py
